--- a/scipy2024/4_masks_and_filters.ipynb
+++ b/scipy2024/4_masks_and_filters.ipynb
@@ -16,7 +16,8 @@
     "\n",
     "**Prerequisites**\n",
     "\n",
-    "- Install: rasterio"
+    "- Install: rasterio\n",
+    "- Download data"
    ]
   },
   {
@@ -25,7 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install rasterio"
+    "!pip install rasterio\n",
+    "!wget https://raw.githubusercontent.com/kevinlacaille/presentations/main/scipy2024/data/presentation/8928dec4ddbffff/DJI_0876.JPG"
    ]
   },
   {
@@ -43,7 +45,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_path = 'data/batch_001/8928dec4ddbffff/DJI_0876.JPG'"
+    "import os\n",
+    "# Define both potential file paths\n",
+    "image_path = \"/content/DJI_0876.JPG\" if os.path.exists(\n",
+    "    \"/content/DJI_0876.JPG\"\n",
+    ") else \"data/presentation/8928dec4ddbffff/DJI_0876.JPG\""
    ]
   },
   {
