--- a/scipy2024/6_image_processing.ipynb
+++ b/scipy2024/6_image_processing.ipynb
@@ -26,7 +26,12 @@
    "outputs": [],
    "source": [
     "!pip install rasterio\n",
-    "!pip install PyExifTool"
+    "!pip install PyExifTool\n",
+    "!wget https://raw.githubusercontent.com/kevinlacaille/presentations/main/scipy2024/data/presentation/8928dec4ddbffff/DJI_0876.JPG\n",
+    "# Download the zip file\n",
+    "!wget https://github.com/kevinlacaille/presentations/raw/main/scipy2024/data/presentation/vancouver_data.zip -O /content/vancouver_data.zip\n",
+    "# Unzip the file\n",
+    "!unzip /content/vancouver_data.zip -d /content/vancouver_data"
    ]
   },
   {
@@ -285,8 +290,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "# Define both potential file paths\n",
+    "image_path = \"/content/DJI_0876.JPG\" if os.path.exists(\n",
+    "    \"/content/DJI_0876.JPG\"\n",
+    ") else \"data/presentation/8928dec4ddbffff/DJI_0876.JPG\"\n",
+    "# Process the image\n",
     "rgb, gsd, area_of_tree, vegetation_mask, mask_overlay, inverse_mask_overlay = process_image(\n",
-    "    'data/batch_001/8928dec4ddbffff/DJI_0876.JPG')\n",
+    "    image_path)\n",
     "visualize_segmentation(rgb, mask_overlay, inverse_mask_overlay)"
    ]
   },
@@ -306,8 +317,18 @@
     "import glob\n",
     "import os\n",
     "\n",
-    "images = glob.glob('data/presentation/*/*/*.JPG')\n",
-    "print(images)\n",
+    "# Define primary and secondary paths\n",
+    "primary_path = '/content/'\n",
+    "secondary_path = 'data/presentation/*/*/'\n",
+    "\n",
+    "# Find images in both paths\n",
+    "primary_images = glob.glob(os.path.join(primary_path, '**/*.JPG'),\n",
+    "                           recursive=True)\n",
+    "secondary_images = glob.glob(os.path.join(secondary_path, '*.JPG'))\n",
+    "\n",
+    "# Combine both lists, ensuring no duplicates\n",
+    "images = list(set(primary_images + secondary_images))\n",
+    "\n",
     "num_images = 0\n",
     "total_trees = 0\n",
     "for image_path in images:\n",
