--- a/scipy2024/2_exif.ipynb
+++ b/scipy2024/2_exif.ipynb
@@ -28,6 +28,7 @@
    "source": [
     "!pip install rasterio\n",
     "!pip install PyExifTool\n",
+    "!apt-get install -y exiftool\n",
     "!wget https://raw.githubusercontent.com/kevinlacaille/presentations/main/scipy2024/data/presentation/8928dec4ddbffff/DJI_0876.JPG"
    ]
   },
