--- a/scipy2024/6_image_processing.ipynb
+++ b/scipy2024/6_image_processing.ipynb
@@ -16,7 +16,8 @@
     "\n",
     "**Prerequisites**\n",
     "\n",
-    "- Install: rasterio, exiftool"
+    "- Install: rasterio, exiftool\n",
+    "- Download data"
    ]
   },
   {
@@ -26,6 +27,7 @@
    "outputs": [],
    "source": [
     "!pip install rasterio\n",
+    "!apt-get install -y exiftool\n",
     "!pip install PyExifTool\n",
     "!wget https://raw.githubusercontent.com/kevinlacaille/presentations/main/scipy2024/data/presentation/8928dec4ddbffff/DJI_0876.JPG\n",
     "# Download the zip file\n",
