split up file searching

--- a/scipy2024/6_image_processing.ipynb
+++ b/scipy2024/6_image_processing.ipynb
@@ -329,8 +329,15 @@
     "secondary_images = glob.glob(os.path.join(secondary_path, '*.JPG'))\n",
     "\n",
     "# Combine both lists, ensuring no duplicates\n",
-    "images = list(set(primary_images + secondary_images))\n",
-    "\n",
+    "images = list(set(primary_images + secondary_images))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "num_images = 0\n",
     "total_trees = 0\n",
     "for image_path in images:\n",
