cleaned up and added MD

--- a/scipy2024/1_rasters.ipynb
+++ b/scipy2024/1_rasters.ipynb
@@ -40,12 +40,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Either use path defined in Google Colab or path relative to this notebook in the repo."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "# Define both potential file paths\n",
     "image_path = \"/content/DJI_0876.JPG\" if os.path.exists(\n",
     "    \"/content/DJI_0876.JPG\"\n",
@@ -57,6 +65,13 @@
    "metadata": {},
    "source": [
     "### Examining Metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Open a geospatial image using Rasterio and print its metadata, the number of bands, projection information, and spatial bounds.\n"
    ]
   },
   {
@@ -74,7 +89,7 @@
     "    # Image's projection\n",
     "    print('Projection:', src.crs)\n",
     "    # Image's bounds\n",
-    "    print('Bounds:', src.bounds)\n"
+    "    print('Bounds:', src.bounds)"
    ]
   },
   {
@@ -92,6 +107,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Open a geospatial image and reads the blue, green, and red bands as NumPy arrays.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -105,13 +127,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Below helps give insight and understanding of the data we're dealing with:\n",
+    "- The luminance values of each pixel (how bright they are) in the blue band\n",
+    "- The image's radiometric resolution\n",
+    "- The minimum and maximum values of the luminance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 91 101  85 ... 145 199 233]\n",
+      " [ 97 102  82 ... 144 227 236]\n",
+      " [ 90  92  90 ... 191 233 236]\n",
+      " ...\n",
+      " [216 195 108 ...  79  78  67]\n",
+      " [203 158 118 ...  74  82  77]\n",
+      " [142 151 150 ...  75  79  73]]\n",
+      "Data type: uint8\n",
+      "Min: 0\n",
+      "Max: 255\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the blue band's data\n",
     "print(blue)\n",
+    "\n",
     "# Print data type of the blue band\n",
     "print('Data type:', blue.dtype)\n",
     "print('Min:', blue.min())  #0\n",
@@ -122,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualize all 3 bands: Red, Green, Blue"
+    "Use Matplotlib to visualize the red, green, and blue bands of the image."
    ]
   },
   {
@@ -154,7 +204,7 @@
     "fig.add_axes(ax)\n",
     "ax.imshow(blue, cmap='Blues')\n",
     "plt.axis('off')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -162,6 +212,13 @@
    "metadata": {},
    "source": [
     "### Composing a Scene"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stack together the blue, green, and red bands to green a visual-band (RGB) image."
    ]
   },
   {
@@ -176,6 +233,13 @@
     "rgb = np.dstack((blue, green, red))\n",
     "\n",
     "print('RGB shape:', rgb.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualize the RGB image."
    ]
   },
   {
