cleaned up and added MD

--- a/scipy2024/2_exif.ipynb
+++ b/scipy2024/2_exif.ipynb
@@ -48,10 +48,17 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "# Define both potential file paths\n",
+    "\n",
     "image_path = \"/content/DJI_0876.JPG\" if os.path.exists(\n",
     "    \"/content/DJI_0876.JPG\"\n",
     ") else \"data/presentation/8928dec4ddbffff/DJI_0876.JPG\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import the image using Rasterio and reads the entire image (all 3 bands, red, green, blue) into a multi-dimensional array."
    ]
   },
   {
@@ -63,7 +70,9 @@
     "# import the image\n",
     "with rasterio.open(image_path) as src:\n",
     "    # read the entire image\n",
-    "    img = src.read()"
+    "    img = src.read()\n",
+    "\n",
+    "print(img.shape)"
    ]
   },
   {
@@ -74,6 +83,13 @@
    "source": [
     "import exiftool\n",
     "import json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Extract the metadata from the image using ExifTool and convert it into a useable format (JSON) format for easy manipulation and analysis."
    ]
   },
   {
@@ -88,6 +104,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print the extracted metadata from the image, providing detailed information about the image and its properties. Here is a summary of key attributes:\n",
+    "\n",
+    "- **File Information**: The image file name is `DJI_0876.JPG`, with a size of approximately 5.3 MB.\n",
+    "- **Image Details**: The image dimensions are 4000x3000 pixels, with an 8-bit depth and 3 color components. The camera model is `DJI FC3682`.\n",
+    "- **EXIF Data**: The exposure time is 0.000625 seconds (1/1600s), with an aperture value of 1.7 and ISO 100. The image was captured on April 20, 2024, at 11:48:07.\n",
+    "- **GPS Coordinates**: The image includes GPS metadata, pinpointing the location at latitude 49.2886° N and longitude 122.8356° W, with an altitude of 108.7 meters, relative to the takeoff location.\n",
+    "- **Additional Data**: The metadata also contains various details about the camera settings, including exposure program, metering mode, and focal length. The gimbal and flight details such as pitch, yaw, and roll angles are also recorded."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -95,6 +124,13 @@
    "source": [
     "# Print the metadata json\n",
     "print(json.dumps(metadata, indent=4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set relevant metadata to variables for future analysis."
    ]
   },
   {
@@ -116,6 +152,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ground Sampling Distance (GSD) is a measure of the spatial resolution of an image, representing the real-world size of one pixel in the image. Namely, how large a pixel is projected on the ground. It is calculated using the formula:\n",
+    "\n",
+    "$$ \\text{GSD} = \\frac{\\text{altitude} \\times \\text{pixel pitch}}{\\text{focal length} / 1000} $$\n",
+    "\n",
+    "- **Altitude**: The height at which the image was captured above the ground.\n",
+    "- **Pixel Pitch**: The physical distance between the centers of two adjacent pixels on the camera sensor.\n",
+    "- **Focal Length**: The distance between the camera lens and the sensor.\n",
+    "\n",
+    "Smaller GSD means higher spatial resolution, as each pixel covers a smaller area on the ground."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -123,8 +174,21 @@
    "source": [
     "# Calculate the GSD (Ground Sample Distance)\n",
     "gsd = (altitude * pixel_pitch) / (focal_length / 1000)\n",
-    "print(\"GSD: \", gsd, \"meters / px\")\n",
-    "print(\"GSD: \", gsd * 100, \"cm / px\")\n"
+    "\n",
+    "# print GSD in meters and cm round to 2 decimal places\n",
+    "print(\"GSD: \", round(gsd, 2), \"meters / px\")\n",
+    "print(\"GSD: \", round(gsd * 100, 2), \"cm / px\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can estimate how large a tree would look on an image in terms of pixels by adjusting our Ground Sampling Distance (GSD) calculation:\n",
+    "\n",
+    "$$ \\text{GSD} = \\frac{(\\text{altitude} - \\text{tree height}) \\times \\text{pixel pitch}}{\\text{focal length} / 1000} $$\n",
+    "\n",
+    "In Vancouver, BC, Canada, the average tree's height is about 10 meters and the average tree's cannopy diameter is also about 10 meters."
    ]
   },
   {
@@ -141,9 +205,11 @@
     "gsd = (altitude - height_tree) * pixel_pitch / focal_length\n",
     "\n",
     "diameter_of_tree = 10  # meters\n",
+    "\n",
     "# Number of pixels the tree will cover\n",
-    "area_of_tree = diameter_of_tree / gsd\n",
-    "print(\"Area of tree: \", int(area_of_tree), \"pixels\")"
+    "diameter_of_tree_px = diameter_of_tree / gsd\n",
+    "\n",
+    "print(\"Area of tree: \", int(diameter_of_tree_px), \"pixels\")"
    ]
   }
  ],
