cleaned up and added MD

--- a/scipy2024/3_vari.ipynb
+++ b/scipy2024/3_vari.ipynb
@@ -36,17 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import rasterio"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import os\n",
-    "# Define both potential file paths\n",
+    "\n",
     "image_path = \"/content/DJI_0876.JPG\" if os.path.exists(\n",
     "    \"/content/DJI_0876.JPG\"\n",
     ") else \"data/presentation/8928dec4ddbffff/DJI_0876.JPG\""
@@ -58,11 +49,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import rasterio\n",
+    "\n",
     "# Open the image and read the bands as numpy arrays\n",
     "with rasterio.open(image_path) as src:\n",
     "    blue = src.read(1)\n",
     "    green = src.read(2)\n",
     "    red = src.read(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Handle potential division errors and invalid operations in NumPy calculations by ignoring them. This will be particularly useful when performing operations that may result in division by zero or NaN values.\n",
+    "\n",
+    "When dividing by zero with this setting, it will returning `inf` (infinity) instead of raising an error."
    ]
   },
   {
@@ -72,6 +74,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "\n",
     "# Allow division by zero\n",
     "np.seterr(divide='ignore', invalid='ignore')"
    ]
@@ -87,12 +90,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualize the RGB image."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
+    "\n",
     "# Visualize the color image\n",
     "fig = plt.figure(frameon=False)\n",
     "ax = plt.Axes(fig, [0., 0., 1., 1.])\n",
@@ -107,6 +118,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This code calculates the Visible Atmospherically Resistant Index (VARI) using the green, red, and blue bands of the image. The VARI is a vegetation index designed to minimize the effects of atmospheric variations.\n",
+    "\n",
+    "$$ \\text{VARI} = \\frac{\\text{green} - \\text{red}}{\\text{green} + \\text{red} - \\text{blue}} $$\n",
+    "\n",
     "VARI reference: https://calmit.unl.edu/people/agitelson2/pdf/07_IJRS-2002_23-2002.pdf"
    ]
   },
@@ -121,6 +136,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's visualize VARI!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -129,6 +151,13 @@
     "plt.imshow(vari, cmap='Greens')\n",
     "plt.colorbar()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wide Range of VARI values, let's pin down the useful values. Vegetation usually resides between VARI values of 0-1, but in this case, we see the most dramatic effects between 0.1-0.5."
    ]
   },
   {
