--- a/scipy2024/2_exif.ipynb
+++ b/scipy2024/2_exif.ipynb
@@ -38,15 +38,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import rasterio"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import os\n",
     "\n",
     "image_path = \"/content/DJI_0876.JPG\" if os.path.exists(\n",
@@ -67,6 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import rasterio\n",
+    "\n",
     "# import the image\n",
     "with rasterio.open(image_path) as src:\n",
     "    # read the entire image\n",
@@ -157,7 +150,7 @@
    "source": [
     "Ground Sampling Distance (GSD) is a measure of the spatial resolution of an image, representing the real-world size of one pixel in the image. Namely, how large a pixel is projected on the ground. It is calculated using the formula:\n",
     "\n",
-    "$$ \\text{GSD} = \\frac{\\text{altitude} \\times \\text{pixel pitch}}{\\text{focal length} / 1000} $$\n",
+    "$$ \\text{GSD} = \\frac{\\text{altitude} \\times \\text{pixel pitch}}{\\text{focal length}} $$\n",
     "\n",
     "- **Altitude**: The height at which the image was captured above the ground.\n",
     "- **Pixel Pitch**: The physical distance between the centers of two adjacent pixels on the camera sensor.\n",
@@ -186,7 +179,7 @@
    "source": [
     "We can estimate how large a tree would look on an image in terms of pixels by adjusting our Ground Sampling Distance (GSD) calculation:\n",
     "\n",
-    "$$ \\text{GSD} = \\frac{(\\text{altitude} - \\text{tree height}) \\times \\text{pixel pitch}}{\\text{focal length} / 1000} $$\n",
+    "$$ \\text{GSD} = \\frac{(\\text{altitude} - \\text{tree height}) \\times \\text{pixel pitch}}{\\text{focal length}} $$\n",
     "\n",
     "In Vancouver, BC, Canada, the average tree's height is about 10 meters and the average tree's cannopy diameter is also about 10 meters."
    ]
