--- a/scipy2024/5_segmentation.ipynb
+++ b/scipy2024/5_segmentation.ipynb
@@ -31,6 +31,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's get the vegetation and non-vegetation masks as we did in `4_masks_and_filters.ipynb`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -39,9 +46,9 @@
     "import rasterio\n",
     "import cv2 as cv\n",
     "import numpy as np\n",
-    "\n",
     "import os\n",
-    "# Define both potential file paths\n",
+    "\n",
+    "# Path to the image\n",
     "image_path = \"/content/DJI_0876.JPG\" if os.path.exists(\n",
     "    \"/content/DJI_0876.JPG\"\n",
     ") else \"data/presentation/8928dec4ddbffff/DJI_0876.JPG\"\n",
@@ -52,13 +59,13 @@
     "    green = src.read(2)\n",
     "    red = src.read(3)\n",
     "\n",
-    "import numpy as np\n",
     "# Allow division by zero\n",
     "np.seterr(divide='ignore', invalid='ignore')\n",
     "\n",
     "# Stack the bands to create a color image\n",
     "rgb = np.dstack((blue, green, red))\n",
     "\n",
+    "# Get VARI index\n",
     "vari = (green.astype(float) - red.astype(float)) / (\n",
     "    green.astype(float) + red.astype(float) - blue.astype(float))\n",
     "\n",
@@ -72,7 +79,18 @@
     "\n",
     "# Generate the non-vegetation mask\n",
     "non_vegetation_mask = np.full(vari.shape, np.nan)\n",
-    "non_vegetation_mask[vari < vari_min] = 1\n"
+    "non_vegetation_mask[vari < vari_min] = 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's use the Ground Sampling Distance (GSD) we measured in `exif.ipynb` to convert real-world measurements to pixel dimensions for defining the morphological kernel size. The GSD represents the actual ground distance that each pixel covers, allowing us to translate real-world dimensions into the pixel space of the image.\n",
+    "\n",
+    "We typically use a square kernel for morphological operations, so we take the square root of the pixel area to determine the side length of the kernel.\n",
+    "\n",
+    "Ensure that the kernel size is odd to maintain symmetry around the central pixel during morphological operations."
    ]
   },
   {
@@ -81,10 +99,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gsd = 0.028712994791666672  # meters per pixel\n",
+    "# The ground sampling distance (GSD) of the image\n",
+    "gsd = 0.025  # meters per pixel\n",
+    "\n",
+    "# Diameter of the tree in physical units\n",
     "diameter_of_tree = 10  # meters\n",
+    "\n",
+    "# Kernel size in pixels\n",
     "kernel_size = int(np.sqrt(diameter_of_tree / gsd))  # square kernel size\n",
-    "print(\"Kernel size: \", kernel_size, \"pixels\")\n"
+    "\n",
+    "# Ensure kernel size is odd\n",
+    "if kernel_size % 2 == 0:\n",
+    "    kernel_size += 1\n",
+    "\n",
+    "print(\"Kernel size: \", kernel_size, \"pixels\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Apply the image processing pipeline we defined in the later half of `4_masks_and_filters.ipynb`."
    ]
   },
   {
@@ -96,13 +131,20 @@
     "# Apply a Gaussian blur to the vegetation mask\n",
     "blur = cv.GaussianBlur(vegetation_mask, (7, 7), 0)\n",
     "\n",
+    "# Create the opening and closing kernels defined by the size of the tree\n",
     "opening_kernel = np.ones((kernel_size, kernel_size), np.uint8)\n",
-    "\n",
-    "opening = cv.morphologyEx(blur, cv.MORPH_OPEN, opening_kernel)\n",
-    "\n",
     "closing_kernel = np.ones((kernel_size, kernel_size), np.uint8)\n",
     "\n",
+    "# Apply morphological opening and closing to the blurred image\n",
+    "opening = cv.morphologyEx(blur, cv.MORPH_OPEN, opening_kernel)\n",
     "closing = cv.morphologyEx(opening, cv.MORPH_CLOSE, closing_kernel)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a purple mask overlay (combining red and blue channels) and apply it to the regions defined by the filtered mask. This will create an overlay for the filtered vegetation mask."
    ]
   },
   {
@@ -122,12 +164,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do the same as above, but for the non-vegetation mask."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create the inverse mask\n",
+    "# Create a non-vegetation mask by inverting the filtered vegetation mask\n",
     "inverse_closing = np.logical_not(closing).astype(np.uint8)\n",
     "\n",
     "# Create an inverse mask overlay with purple color\n",
@@ -143,12 +192,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt"
+    "Visualize the filtered vegetation and non-vegetation masks."
    ]
   },
   {
@@ -157,6 +204,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "fig, ax = plt.subplots(1, 3, figsize=(18, 6))\n",
     "\n",
     "plt.sca(ax[0])\n",
@@ -177,6 +226,13 @@
     "plt.title('non-veg segmentation')\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This approach effectively segments vegetation in an image without using machine learning by leveraging remote sensing and image processing techniques!"
    ]
   }
  ],
