updated MD for more precision

--- a/scipy2024/4_masks_and_filters.ipynb
+++ b/scipy2024/4_masks_and_filters.ipynb
@@ -178,7 +178,7 @@
    "source": [
     "Apply a Gaussian blur to the vegetation mask to smooth out the edges and reduce noise, providing a cleaner mask for further analysis.\n",
     "\n",
-    "The `GaussianBlur` function from OpenCV uses a kernel size of 7x7 and a standard deviation of 0, resulting in a smoothed version of the vegetation mask.\n",
+    "The `GaussianBlur` function from OpenCV uses a kernel size of 7x7 and a standard deviation based on the kernel size, resulting in a smoothed version of the vegetation mask.\n",
     "\n",
     "If the pixel pitch is 2.5 cm, a 7x7 kernel in the Gaussian blur operation covers an area of:\n",
     "\n",
