--- a/scipy2024/6_image_processing.ipynb
+++ b/scipy2024/6_image_processing.ipynb
@@ -714,7 +714,7 @@
     "    n_trees = num_vegetation_pixels / (area_of_tree)\n",
     "    print(f\"Number of trees: {int(n_trees)}\")\n",
     "\n",
-    "    # visualize_segmentation(rgb, mask_overlay, inverse_mask_overlay)\n",
+    "    visualize_segmentation(rgb, mask_overlay, inverse_mask_overlay)\n",
     "\n",
     "    total_trees += n_trees\n",
     "    num_images += 1\n",
